22th june, missing value handle with SCIKIT Learn Method

--- a/Learning ML/first-checkpoint.ipynb
+++ b/Learning ML/first-checkpoint.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "cfb9ab2b",
    "metadata": {},
    "outputs": [
@@ -699,7 +699,7 @@
        "29        640.0             180.0             1.0         Rural         NaN  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "e4e14a73",
    "metadata": {},
    "outputs": [
@@ -736,7 +736,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "e8cd74ff",
    "metadata": {},
    "outputs": [
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "78d4b20f",
    "metadata": {},
    "outputs": [
@@ -794,7 +794,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_14872\\38282485.py:1: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_11528\\38282485.py:1: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  dataset.fillna(method='ffill')\n"
      ]
     },
@@ -1083,7 +1083,7 @@
        "[1000 rows x 15 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "49dfe67e",
    "metadata": {},
    "outputs": [
@@ -1102,7 +1102,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_14872\\670393098.py:1: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_11528\\670393098.py:1: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  dataset.fillna(method='bfill')\n"
      ]
     },
@@ -1391,7 +1391,7 @@
        "[1000 rows x 15 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "679a38f5",
    "metadata": {},
    "outputs": [
@@ -1410,7 +1410,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_14872\\2327596161.py:1: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_11528\\2327596161.py:1: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  dataset.fillna(method='bfill',axis=1).head(4)\n"
      ]
     },
@@ -1549,7 +1549,7 @@
        "3       630.0            360.0          Urban         Urban           Y  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1560,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "ae3699b3",
    "metadata": {},
    "outputs": [
@@ -1568,7 +1568,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_14872\\1894698799.py:1: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_11528\\1894698799.py:1: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  dataset.fillna(method='ffill',axis=1).head(4)\n"
      ]
     },
@@ -1707,7 +1707,7 @@
        "3       630.0            360.0          360.0         Urban           Y  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1718,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "6696be9a",
    "metadata": {},
    "outputs": [
@@ -1729,7 +1729,7 @@
        "Name: Gender, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1740,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "f003575e",
    "metadata": {},
    "outputs": [
@@ -1750,7 +1750,7 @@
        "'Female'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1761,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "0bfbc102",
    "metadata": {},
    "outputs": [
@@ -1782,7 +1782,7 @@
        "Name: Gender, Length: 1000, dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1793,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "ba0dc9db",
    "metadata": {},
    "outputs": [],
@@ -1804,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "e4282a5c",
    "metadata": {},
    "outputs": [
@@ -2489,7 +2489,7 @@
        "29        640.0             180.0             1.0         Rural           N  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2497,6 +2497,50 @@
    "source": [
     "dataset.head(30)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "48ac0d8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Load_ID                 0\n",
+       "Name                    0\n",
+       "Gender                  0\n",
+       "Married                 0\n",
+       "Dependent               0\n",
+       "Education               0\n",
+       "Self_Employed           0\n",
+       "Application_No          0\n",
+       "Applicant_Income      100\n",
+       "Coapplicant_Income    100\n",
+       "Loan_Amount           100\n",
+       "Loan_Amount_Term      100\n",
+       "Credit_History        100\n",
+       "Property_Area           0\n",
+       "Loan_Status             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a453b38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
